--- a/client/react-app/src/scss/_data_section.scss
+++ b/client/react-app/src/scss/_data_section.scss
@@ -4,16 +4,27 @@
 }
 
 .grid {
-  display: grid;
+  display: inline-grid;
   row-gap: 0.2rem;
   column-gap: 0.2rem;
 
   .header-item {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
-    padding: 0.8rem 0;
     background-color: darken(lightsalmon, 10%);
+
+    h3 {
+      flex-grow: 1;
+      text-align: center;
+      padding: 0.8rem 0;
+    }
+    .resize-element {
+      width: 0.4rem;
+      height: 100%;
+      background-color: black;
+      cursor: ew-resize;
+    }
   }
 
   .grid-block {
